feat: typescript swag api client
