# docs/swagger/swagger.json
@@ -1,22 +1,18 @@
-// Code generated by swaggo/swag. DO NOT EDIT
-package docs
-
-import "github.com/swaggo/swag"
-
-const docTemplate = `{
-    "schemes": {{ marshal .Schemes }},
+{
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
+        "description": "Control your legacy Reciva based internet radios (Crane, Grace Digital, Tangent, etc.) via web browser or REST API.",
+        "title": "Reciva Web Remote",
         "contact": {},
-        "version": "{{.Version}}"
+        "version": "1.0"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
+    "basePath": "/api",
     "paths": {
         "/build": {
             "get": {
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "build"
                 ],
@@ -33,6 +29,9 @@ const docTemplate = `{
         },
         "/presets": {
             "get": {
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "presets"
                 ],
@@ -98,6 +97,9 @@ const docTemplate = `{
         },
         "/presets/{url}": {
             "get": {
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "presets"
                 ],
@@ -138,13 +140,22 @@ const docTemplate = `{
         },
         "/radios": {
             "get": {
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "radios"
                 ],
                 "summary": "List radios",
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Radio"
+                            }
+                        }
                     }
                 }
             },
@@ -174,6 +185,9 @@ const docTemplate = `{
         },
         "/radios/{uuid}": {
             "get": {
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "radios"
                 ],
@@ -189,7 +203,10 @@ const docTemplate = `{
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Radio"
+                        }
                     },
                     "404": {
                         "description": "Not Found"
@@ -202,6 +219,9 @@ const docTemplate = `{
         },
         "/radios/{uuid}/subscription": {
             "post": {
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "radios"
                 ],
@@ -230,6 +250,9 @@ const docTemplate = `{
         },
         "/radios/{uuid}/volume": {
             "post": {
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "radios"
                 ],
@@ -258,6 +281,9 @@ const docTemplate = `{
         },
         "/states": {
             "get": {
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "states"
                 ],
@@ -277,6 +303,9 @@ const docTemplate = `{
         },
         "/states/{uuid}": {
             "get": {
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "states"
                 ],
@@ -312,6 +341,9 @@ const docTemplate = `{
                 }
             },
             "patch": {
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "states"
                 ],
@@ -359,6 +391,9 @@ const docTemplate = `{
     "definitions": {
         "http.HTTPError": {
             "type": "object",
+            "required": [
+                "message"
+            ],
             "properties": {
                 "message": {
                     "type": "string"
@@ -384,6 +419,14 @@ const docTemplate = `{
         },
         "model.Build": {
             "type": "object",
+            "required": [
+                "built_by",
+                "commit",
+                "date",
+                "release_url",
+                "summary",
+                "version"
+            ],
             "properties": {
                 "built_by": {
                     "type": "string"
@@ -407,6 +450,11 @@ const docTemplate = `{
         },
         "model.Preset": {
             "type": "object",
+            "required": [
+                "title_new",
+                "url",
+                "url_new"
+            ],
             "properties": {
                 "title_new": {
                     "description": "TitleNew is the overridden title.",
@@ -422,8 +470,30 @@ const docTemplate = `{
                 }
             }
         },
+        "model.Radio": {
+            "type": "object",
+            "required": [
+                "name",
+                "uuid"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "uuid": {
+                    "type": "string"
+                }
+            }
+        },
         "state.Preset": {
             "type": "object",
+            "required": [
+                "number",
+                "title",
+                "title_new",
+                "url",
+                "url_new"
+            ],
             "properties": {
                 "number": {
                     "description": "Number is the preset number.",
@@ -449,6 +519,25 @@ const docTemplate = `{
         },
         "state.State": {
             "type": "object",
+            "required": [
+                "audio_source",
+                "audio_sources",
+                "is_muted",
+                "metadata",
+                "model_name",
+                "model_number",
+                "name",
+                "power",
+                "preset_number",
+                "presets",
+                "status",
+                "title",
+                "title_new",
+                "url",
+                "url_new",
+                "uuid",
+                "volume"
+            ],
             "properties": {
                 "audio_source": {
                     "description": "AudioSource is the audio source.",
@@ -498,7 +587,11 @@ const docTemplate = `{
                 },
                 "status": {
                     "description": "Status is either playing, connecting, or stopped.",
-                    "type": "string"
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/state.Status"
+                        }
+                    ]
                 },
                 "title": {
                     "description": "Title of the current playing stream.",
@@ -525,22 +618,21 @@ const docTemplate = `{
                     "type": "integer"
                 }
             }
+        },
+        "state.Status": {
+            "type": "string",
+            "enum": [
+                "Connecting",
+                "Playing",
+                "Stopped",
+                ""
+            ],
+            "x-enum-varnames": [
+                "StatusConnecting",
+                "StatusPlaying",
+                "StatusStopped",
+                "StatusUnknown"
+            ]
         }
     }
-}`
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = &swag.Spec{
-	Version:          "1.0",
-	Host:             "",
-	BasePath:         "/api",
-	Schemes:          []string{},
-	Title:            "Reciva Web Remote",
-	Description:      "Control your legacy Reciva based internet radios (Crane, Grace Digital, Tangent, etc.) via web browser or REST API.",
-	InfoInstanceName: "swagger",
-	SwaggerTemplate:  docTemplate,
-}
-
-func init() {
-	swag.Register(SwaggerInfo.InstanceName(), SwaggerInfo)
 }
