# http/api.go
@@ -6,7 +6,6 @@ import (
 
 	"github.com/labstack/echo/v4"
 
-	_ "github.com/ItsNotGoodName/reciva-web-remote/docs" // docs is generated by Swag CLI, you have to import it.
 	"github.com/ItsNotGoodName/reciva-web-remote/internal"
 	"github.com/ItsNotGoodName/reciva-web-remote/internal/build"
 	"github.com/ItsNotGoodName/reciva-web-remote/internal/hub"
@@ -21,7 +20,7 @@ import (
 //	@BasePath		/api
 
 type HTTPError struct {
-	Message string `json:"message"`
+	Message string `json:"message" validate:"required"`
 }
 
 type API struct {
@@ -54,6 +53,7 @@ func (a API) RadioMiddleware(next echo.HandlerFunc) echo.HandlerFunc {
 
 //	@Summary	Get build
 //	@Tags		build
+//	@Produce	json
 //	@Success	200	{object}	model.Build
 //	@Router		/build [get]
 func (a API) GetBuild(c echo.Context) error {
@@ -62,6 +62,7 @@ func (a API) GetBuild(c echo.Context) error {
 
 //	@Summary	List presets
 //	@Tags		presets
+//	@Produce	json
 //	@Success	200	{array}		model.Preset
 //	@Failure	500	{object}	HTTPError
 //	@Router		/presets [get]
@@ -76,7 +77,8 @@ func (a API) ListPresets(c echo.Context) error {
 
 //	@Summary	Get preset
 //	@Tags		presets
-//	@Param		url	path		string	true	"Preset URL"
+//	@Param		url	path	string	true	"Preset URL"
+//	@Produce	json
 //	@Success	200	{array}		model.Preset
 //	@Failure	404	{object}	HTTPError
 //	@Failure	500	{object}	HTTPError
@@ -145,7 +147,8 @@ func (a API) DiscoverRadios(c echo.Context) error {
 
 //	@Summary	List radios
 //	@Tags		radios
-//	@Success	200
+//	@Produce	json
+//	@Success	200	{array}	model.Radio
 //	@Router		/radios [get]
 func (a API) ListRadios(c echo.Context) error {
 	return c.JSON(http.StatusOK, radio.ListRadios(a.Hub))
@@ -154,7 +157,8 @@ func (a API) ListRadios(c echo.Context) error {
 //	@Summary	Get radio
 //	@Tags		radios
 //	@Param		uuid	path	string	true	"Radio UUID"
-//	@Success	200
+//	@Produce	json
+//	@Success	200	{object}	model.Radio
 //	@Success	404
 //	@Success	500
 //	@Router		/radios/{uuid} [get]
@@ -166,6 +170,7 @@ func (a API) GetRadio(c echo.Context) error {
 //	@Summary	Refresh radio volume
 //	@Tags		radios
 //	@Param		uuid	path	string	true	"Radio UUID"
+//	@Produce	json
 //	@Success	200
 //	@Success	404
 //	@Success	500
@@ -178,6 +183,7 @@ func (a API) RefreshRadioVolume(c echo.Context) error {
 //	@Summary	Refresh radio subscription
 //	@Tags		radios
 //	@Param		uuid	path	string	true	"Radio UUID"
+//	@Produce	json
 //	@Success	200
 //	@Success	404
 //	@Success	500
@@ -189,6 +195,7 @@ func (a API) RefreshRadioSubscription(c echo.Context) error {
 
 //	@Summary	List states
 //	@Tags		states
+//	@Produce	json
 //	@Success	200	{array}	state.State
 //	@Router		/states [get]
 func (a API) ListStates(c echo.Context) error {
@@ -198,7 +205,8 @@ func (a API) ListStates(c echo.Context) error {
 //	@Summary	Get state
 //	@Tags		states
 //	@Param		uuid	path	string	true	"Radio UUID"
-//	@Success	200		{array}	state.State
+//	@Produce	json
+//	@Success	200	{array}	state.State
 //	@Failure	404
 //	@Failure	500	{object}	HTTPError
 //	@Router		/states/{uuid} [get]
@@ -223,7 +231,8 @@ type PatchState struct {
 //	@Tags		states
 //	@Param		uuid	path	string		true	"Radio UUID"
 //	@Param		state	body	PatchState	false	"Patch state"
-//	@Success	200		{array}	state.State
+//	@Produce	json
+//	@Success	200	{array}	state.State
 //	@Failure	404
 //	@Failure	500	{object}	HTTPError
 //	@Router		/states/{uuid} [patch]
